--- a/deploy/values/main/values.yaml
+++ b/deploy/values/main/values.yaml
@@ -406,6 +406,8 @@ frontend:
       _default: "[{'title':'Etherscan','baseUrl':'https://goerli.etherscan.io','paths':{'tx':'/tx'}}]"
     # network config
     NEXT_PUBLIC_NETWORK_NAME:
+      _default: Ethereum
+    NEXT_PUBLIC_NETWORK_SHORT_NAME:
       _default: Goerli
     NEXT_PUBLIC_NETWORK_ASSETS_PATHNAME:
       _default: ethereum
