--- a/.github/workflows/publish-docker-image-and-deploy.yml
+++ b/.github/workflows/publish-docker-image-and-deploy.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - deploy-to-goerli
 
 env:
   K8S_LOCAL_PORT: ${{ secrets.K8S_LOCAL_PORT }}
@@ -58,7 +57,7 @@ jobs:
     uses: blockscout/blockscout-ci-cd/.github/workflows/deploy.yaml@master
     with:
       env_vars: VALUES_DIR=deploy/values/main,APP_NAME=bs-stack
-      appNamespace: front-main-test
+      appNamespace: front-main
       blockscoutIngressHost: blockscout
       frontendIngressHost: blockscout
       frontendImage: ghcr.io/blockscout/frontend:main
