--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "prepare": "husky install",
     "format-svg": "./node_modules/.bin/svgo -r ./icons",
     "test-ct": "playwright test -c playwright-ct.config.ts",
-    "test-docker": "docker run --rm --network host -v $(pwd):/work/ -w /work/ -it mcr.microsoft.com/playwright:v1.27.0-focal ./run-tests.sh"
+    "test-docker": "docker run --rm --network host -v $(pwd):/work/ -w /work/ -it mcr.microsoft.com/playwright:v1.27.0-focal ./run-tests.sh",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@chakra-ui/react": "2.3.1",
@@ -55,7 +57,16 @@
     "use-font-face-observer": "^1.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.2",
     "@playwright/experimental-ct-react": "^1.26.1",
+    "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/manager-webpack5": "^6.5.13",
+    "@storybook/react": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
     "@svgr/webpack": "^6.5.1",
     "@types/d3": "^7.4.0",
     "@types/node": "17.0.36",
@@ -63,12 +74,14 @@
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "babel-loader": "^8.3.0",
     "dotenv-cli": "^6.0.0",
     "eslint": "8.16.0",
     "eslint-config-next": "^12.3.0",
     "eslint-plugin-es5": "^1.5.0",
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-regexp": "^1.7.0",
+    "eslint-plugin-storybook": "^0.6.7",
     "husky": "^8.0.0",
     "lint-staged": ">=10",
     "playwright": "^1.26.1",
